# univrs-network

crates/mycelial-node/src/: main.rs
crates/mycelial-state/: Cargo.toml
crates/mycelial-state/src/: cache.rs  storage.rs  sync.rs
dashboard/: crt_useP2P.sh
dashboard/src/: App.tsx
dashboard/src/components/: ClusterOverview.tsx  CreditPanel.tsx  GovernancePanel.tsx  ResourcePanel.tsx
dashboard/src/hooks/: useOrchestrator.ts  useOrchestrator.ts.broken  useP2P.ts  useP2P.ts.broken  useP2p.broken
dashboard/src/utils/: crypto.ts
