[package]
name = "mycelial-state"
version.workspace = true
edition.workspace = true

[dependencies]
mycelial-core = { path = "../mycelial-core" }
mycelial-protocol = { path = "../mycelial-protocol" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["sync"] }
parking_lot.workspace = true
lru.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
bs58 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
